# Handsonml

./: .gitignore  Chapter2.ipynb  hello.py  pyproject.toml
chapter_10/: chapter_10.ipynb  chapter_10_exercises.ipynb  my_checkpoints.weights.h5
chapter_10/my_fashion_mnist/bayesian_opt/: oracle.json
chapter_10/my_fashion_mnist/bayesian_opt/trial_00/: checkpoint.weights.h5  trial.json
chapter_10/my_fashion_mnist/bayesian_opt/trial_01/: checkpoint.weights.h5  trial.json
chapter_10/my_fashion_mnist/bayesian_opt/trial_02/: checkpoint.weights.h5  trial.json
chapter_10/my_fashion_mnist/bayesian_opt/trial_03/: checkpoint.weights.h5  (+1 more)
chapter_10/my_fashion_mnist/hyperband/: oracle.json
chapter_10/my_fashion_mnist/my_rnd_search/: oracle.json
chapter_10/my_logs/run_2025_01_11_23_40_47/: events.out.tfevents.1736619047.Chirags-Mac-mini.local.5533.2.v2
chapter_11/: chapter_11.ipynb  chapter_11_exercises.ipynb
chapter_12/: chapter_12.ipynb  chapter_12_exercises.ipynb
chapter_13/: chapter_13.ipynb  chapter_13_exercies.ipynb  practice1.tfrecord
chapter_2/: chapter_2_exercise.ipynb
chapter_3/: chapter_3.ipynb  exercises.ipynb  practice.ipynb  problem_3_titanic.ipynb  spam_filter.ipynb
chapter_4/: chapter_4.ipynb  chapter_4_exercise.ipynb
chapter_5/: chapter_5.ipynb  chapter_5_exercises.ipynb
chapter_6/: chapter_6.ipynb  chapter_6_exercises.ipynb
chapter_7/: chapter_7.ipynb  chapter_7_exercises.ipynb
chapter_8/: chapter_8.ipynb
chapter_9/: gradient_descent.ipynb
chpater_9/: chapter_9.ipynb  chapter_9_exercises.ipynb
support_materials/: math.ipynb
(+383 files in other folders)
