[project]
name = "handsonml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "dask>=2025.1.0",
    "ipykernel>=6.29.5",
    "keras-tuner>=1.4.7",
    "matplotlib>=3.10.0",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "tensor-sensor>=1.0",
    "tensorboard-plugin-profile>=2.18.0",
    "tensorflow>=2.18.0",
]
